# US-stock-K-line-Guess-Game

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
sample_data/: AAPL_1d.csv  TSLA_1d.csv
src/us_kline_guess/: api.py  cli.py  config.py  models.py
src/us_kline_guess/agents/: data_agent.py  episode_agent.py  hint_agent.py  llm_explain_agent.py  scoring_agent.py
src/us_kline_guess/llm/: gemini_client.py
src/us_kline_guess/providers/: __init__.py  base.py  sample_provider.py  stooq_provider.py  yfinance_provider.py
src/us_kline_guess/storage/: file_store.py
src/us_kline_guess/ui/: streamlit_app.py
tests/: test_basic.py
